Fix layout overflow issue with long words (#135)

--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -17,6 +17,7 @@
   padding: 0 1.5rem;
   margin-left: auto;
   margin-right: auto;
+  overflow-wrap: break-word;
 }
 
 @include small-breakpoint {
