--- a/src/styles/components/new-moon.scss
+++ b/src/styles/components/new-moon.scss
@@ -65,6 +65,7 @@ pre code {
   background-color: #333;
   border: 0;
   box-shadow: 2px 4px 25px rgba(0, 0, 0, 0.15);
+  overflow-wrap: normal;
 }
 
 // Keyboard input
